--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,12 +1,12 @@
 $primary: #00ADEE;
 $secondary: #24ABE2;
 $tertiary: #118dbf;;
+$tertiary-dark: #06105F;
 $dark: #424242;
 $dark-grey: #484848;
 $black: #000000;
 $white: #ffffff;
 
-$tertiary-dark: #e45d1e;
 $quartinary: #009f9a;
 $grey: #414141;
 $medium-grey: #537473;
