--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -11,8 +11,38 @@ header {
 
     .banner {
         background: imgUrl("banner.jpg") center;
-        background-size: contain;
+        background-size: cover;
         padding: 575px 0 101px;
+
+        .based-in-sydney {
+            height: 70px;
+            display: inline-flex;
+            align-items: center;
+            color: $white;
+            background: rgba(6, 30, 105, 0.6);
+            font-size: 1.375rem; // 22px
+            font-weight: 700;
+            padding: 8px 24px;
+            border-radius: 4px;
+
+            @include media-breakpoint-down(md) {
+                font-size: 2rem;
+            }
+
+            @include media-breakpoint-down(sm) {
+                font-size: 1.5rem;
+            }
+        }
+
+        .get-quote-btn {
+            height: 70px;
+            background: rgba(255, 255, 255, 0.58);
+            mix-blend-mode: normal;
+            border-radius: 3px;
+            display: flex;
+            align-items: center;
+            padding: 8px 34px;
+        }
     }
 }
 
