--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -43,6 +43,157 @@ header {
             align-items: center;
             padding: 8px 34px;
         }
+
+        .badge-btn {
+            transition: 0.3s all ease-in-out;
+            border-radius: 100px;
+
+            &:hover {
+                transform: scale(1.1);
+                box-shadow: 0 0 13px 13px rgba(0, 0, 0, 0.1);
+            }
+        }
+    }
+}
+
+section.about {
+    background: imgUrl("about.jpg") center top,
+        linear-gradient(181.35deg, #24abe2 -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
+
+    @include media-breakpoint-up(xxl) {
+        background: imgUrl("about-xl.jpg") center top,
+            linear-gradient(181.35deg, #24abe2 -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
+    }
+
+    background-size: contain;
+    padding-top: 100px;
+
+    .play-btn-xxl {
+        position: absolute;
+        top: 31%;
+        left: 28%;
+
+        @include media-breakpoint-down(xxl) {
+            display: none;
+        }
+    }
+
+    .laptop {
+        position: relative;
+
+        .play-btn {
+            top: 25%;
+            left: 40%;
+            position: absolute;
+            cursor: pointer;
+        }
+    }
+
+    .cta {
+        background: #e8f7ff;
+        box-shadow: 4px 4px 13px rgba(0, 0, 0, 0.15);
+        border-radius: 35px;
+        padding: 24px 53px;
+        text-align: center;
+        height: 251px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .description {
+        padding: 120px 0;
+    }
+}
+
+section.services {
+    background: linear-gradient(#1587b1 0 80%, $white 80% 100%);
+    margin-bottom: 123px;
+
+    .service-slider {
+        .slick-track {
+            display: flex;
+        }
+
+        .slick-slide {
+            height: inherit;
+            display: flex;
+            align-items: end;
+            margin: 0 10px;
+        }
+
+        .service-slider-content {
+            position: relative;
+
+            .title {
+                position: absolute;
+                width: 100%;
+                bottom: 54px;
+                text-align: center;
+            }
+        }
+
+        .slick-dots {
+            bottom: -80px;
+
+            li {
+                margin: 0;
+                background-color: #AFAFAF;
+                width: 60px;
+                height: 5px;
+
+                button {
+                    width: 100%;
+                    height: 5px;
+                    padding: 0;
+
+                    &::before {
+                        content: "";
+                        height: 5px;
+                        background-color: #AFAFAF;
+                        opacity: 1;
+                        width: 100%;
+                    }
+                }
+
+                &.slick-active {
+                    opacity: 1;
+                    top: 13px;
+
+                    button {
+                        width: 30px;
+                        height: 30px;
+                        z-index: 10;
+                        border-radius: 20px;
+                        position: relative;
+                        border: 8px solid $primary;
+                        top: -13px;
+                        
+                        &::before {
+                            content: "";
+                            width: 20px;
+                            opacity: 1 !important;
+                            height: 20px;
+                            top: -3px;
+                            left: -3px;
+                            background: #eaeaea;
+                            border-radius: 20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+section.gallery {
+    background: imgUrl("star-logo.png") left bottom;
+    padding: 126px 0;
+
+    img {
+        width: 100%;
+        border-radius: 10px;
     }
 }
 
