--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,12 +6,12 @@ $dark: #424242;
 $dark-grey: #484848;
 $black: #000000;
 $white: #ffffff;
+$light: #EAEAEA;
 
 $quartinary: #009f9a;
 $grey: #414141;
 $medium-grey: #537473;
 $light-grey: #eef2f7;
-$light: #f4f4f4;
 
 $theme-colors: () !default;
 $theme-colors: map-merge(
