--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -108,8 +108,8 @@ section.about {
 }
 
 section.services {
-    background: linear-gradient(#1587b1 0 80%, $white 80% 100%);
-    margin-bottom: 123px;
+    background: linear-gradient(#1587b1 0 80%, rgba(0,0,0,0) 80% 100%);
+    padding-bottom: 123px;
 
     .service-slider {
         .slick-track {
@@ -139,7 +139,7 @@ section.services {
 
             li {
                 margin: 0;
-                background-color: #AFAFAF;
+                background-color: #afafaf;
                 width: 60px;
                 height: 5px;
 
@@ -151,7 +151,7 @@ section.services {
                     &::before {
                         content: "";
                         height: 5px;
-                        background-color: #AFAFAF;
+                        background-color: #afafaf;
                         opacity: 1;
                         width: 100%;
                     }
@@ -169,7 +169,7 @@ section.services {
                         position: relative;
                         border: 8px solid $primary;
                         top: -13px;
-                        
+
                         &::before {
                             content: "";
                             width: 20px;
@@ -177,7 +177,7 @@ section.services {
                             height: 20px;
                             top: -3px;
                             left: -3px;
-                            background: #eaeaea;
+                            background: $light;
                             border-radius: 20px;
                         }
                     }
@@ -194,6 +194,99 @@ section.gallery {
     img {
         width: 100%;
         border-radius: 10px;
+    }
+}
+
+section.guarantee {
+    background: $primary;
+    padding: 48px 0;
+}
+
+section.form {
+    padding: 136px 0 163px;
+
+    form {
+        font-family: $font-gilroy;
+
+        .form-label {
+            color: $dark;
+            font-weight: 500;
+            letter-spacing: 0.01em;
+            font-size: 1rem;
+            margin-bottom: 8px;
+
+            @include media-breakpoint-down(sm) {
+                font-size: 0.875rem;
+            }
+        }
+
+        input,
+        select,
+        textarea {
+            border-radius: 4px;
+            border-color: $dark;
+            background-color: $light;
+        }
+
+        button {
+            background: $primary;
+            color: $white;
+            width: 100%;
+            letter-spacing: 0.01em;
+            font-size: 1rem;
+
+            @include media-breakpoint-down(sm) {
+                font-size: 0.875rem;
+            }
+        }
+
+        input[type="radio"] {
+            opacity: 0;
+            position: fixed;
+            width: 0;
+        }
+
+        .radio-toolbar {
+            border-radius: 4px;
+            overflow: hidden;
+
+            label {
+                display: block;
+                font-weight: 600;
+                text-align: center;
+                padding: 20px 10px;
+                cursor: pointer;
+                color: $dark;
+                background-color: #d9d9d9;
+                height: 100%;
+                margin-bottom: 0;
+                letter-spacing: 0.01em;
+                font-size: 11px;
+                border-top: 1px solid $light;
+                border-bottom: 1px solid $light;
+            }
+
+            input[type="radio"]:checked + label {
+                background-color: $white;
+                color: $primary;
+                border: 1px solid $dark;
+                border-radius: 3px;
+                overflow: hidden;
+            }
+
+            label:hover {
+                background-color: #d9d9d92e;
+            }
+
+            .radio-img {
+                height: 48px;
+                width: auto;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+
     }
 }
 
