--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -12,7 +12,11 @@ header {
     .banner {
         background: imgUrl("banner.jpg") center;
         background-size: cover;
-        padding: 575px 0 101px;
+        padding: 101px 0;
+
+        @include media-breakpoint-up(md) {
+            padding: 575px 0 101px;
+        }
 
         .based-in-sydney {
             height: 70px;
@@ -30,7 +34,9 @@ header {
             }
 
             @include media-breakpoint-down(sm) {
-                font-size: 1.5rem;
+                font-size: 0.875rem;
+                padding: 8px 16px;
+                height: 54px;
             }
         }
 
@@ -42,6 +48,12 @@ header {
             display: flex;
             align-items: center;
             padding: 8px 34px;
+
+            @include media-breakpoint-down(sm) {
+                font-size: 0.875rem;
+                padding: 8px 16px;
+                height: 54px;
+            }
         }
 
         .badge-btn {
@@ -59,14 +71,18 @@ header {
 section.about {
     background: imgUrl("about.jpg") center top,
         linear-gradient(181.35deg, #24abe2 -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
+    background-size: contain;
+    padding-top: 64px;
+
+    @include media-breakpoint-up(md) {
+        padding-top: 100px;
+    }
 
     @include media-breakpoint-up(xxl) {
         background: imgUrl("about-xl.jpg") center top,
             linear-gradient(181.35deg, #24abe2 -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
+        background-size: contain;
     }
-
-    background-size: contain;
-    padding-top: 100px;
 
     .play-btn-xxl {
         position: absolute;
@@ -86,6 +102,22 @@ section.about {
             left: 40%;
             position: absolute;
             cursor: pointer;
+
+            @include media-breakpoint-down(sm) {
+                height: 60px;
+            }
+        }
+    }
+
+    .heroHeading {
+        text-transform: uppercase;
+        font-weight: 800;
+        color: $primary;
+
+        @include media-breakpoint-down(sm) {
+            color: $white;
+            text-align: center;
+            padding-top: 34px;
         }
     }
 
@@ -95,21 +127,33 @@ section.about {
         border-radius: 35px;
         padding: 24px 53px;
         text-align: center;
-        height: 251px;
+        min-height: 251px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @include media-breakpoint-down(sm) {
+            min-height: 200px;
+        }
     }
 
     .description {
-        padding: 120px 0;
+        padding: 80px 0;
+
+        @include media-breakpoint-up(md) {
+            padding: 120px 0;
+        }
     }
 }
 
 section.services {
-    background: linear-gradient(#1587b1 0 80%, rgba(0,0,0,0) 80% 100%);
-    padding-bottom: 123px;
+    background: linear-gradient(#1587b1 0 80%, rgba(0, 0, 0, 0) 80% 100%);
+    padding-bottom: 80px;
+
+    @include media-breakpoint-up(md) {
+        padding-bottom: 123px;
+    }
 
     .service-slider {
         .slick-track {
@@ -129,8 +173,12 @@ section.services {
             .title {
                 position: absolute;
                 width: 100%;
-                bottom: 54px;
                 text-align: center;
+                bottom: 34px;
+                
+                @include media-breakpoint-up(md) {
+                    bottom: 54px;
+                }
             }
         }
 
@@ -189,7 +237,11 @@ section.services {
 
 section.gallery {
     background: imgUrl("star-logo.png") left bottom;
-    padding: 126px 0;
+    padding: 64px 0;
+
+    @include media-breakpoint-up(md) {
+        padding: 126px 0;
+    }
 
     img {
         width: 100%;
@@ -203,7 +255,11 @@ section.guarantee {
 }
 
 section.form {
-    padding: 136px 0 163px;
+    padding: 80px 0;
+
+    @include media-breakpoint-up(md) {
+        padding: 136px 0 163px;
+    }
 
     form {
         font-family: $font-gilroy;
@@ -286,15 +342,18 @@ section.form {
                 justify-content: center;
             }
         }
-
     }
 }
 
 section.promise {
-    padding: 80px 0;
     background-color: $primary;
     color: $white;
     text-align: center;
+    padding: 64px 0;
+    
+    @include media-breakpoint-up(md) {
+        padding: 80px 0;
+    }
 
     .star-wrapper {
         background-color: $white;
@@ -328,7 +387,7 @@ footer {
     font-size: 1rem;
     font-family: $font-gilroy;
     font-weight: 500;
-    
+
     @include media-breakpoint-down(sm) {
         font-size: 0.875rem;
     }
