--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -3,10 +3,9 @@ h1 {
     font-size: 3.4375rem; // 55px
     margin-bottom: 0;
 
-    @include media-breakpoint-down(md) {
-        font-size: 3rem;
+    @include media-breakpoint-down(lg) {
+        font-size: 2.85rem;
     }
-
     @include media-breakpoint-down(sm) {
         font-size: 2rem;
     }
@@ -16,7 +15,7 @@ h2 {
     font-size: 1.9375rem; // 31px
     margin-bottom: 0;
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(lg) {
         font-size: 1.5rem;
     }
 }
@@ -35,6 +34,10 @@ h4,
 .h4 {
     font-size: 1.25rem; // 20px
     margin-bottom: 0;
+
+    @include media-breakpoint-down(lg) {
+        font-size: 1em;
+    }
 
     @include media-breakpoint-down(sm) {
         font-size: 1rem;
