--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -15,6 +15,10 @@ header {
         padding: 101px 0;
 
         @include media-breakpoint-up(md) {
+            padding: 375px 0 101px;
+        }
+
+        @include media-breakpoint-up(lg) {
             padding: 575px 0 101px;
         }
 
@@ -114,7 +118,7 @@ section.about {
         font-weight: 800;
         color: $primary;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(lg) {
             color: $white;
             text-align: center;
             padding-top: 34px;
@@ -132,6 +136,10 @@ section.about {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @include media-breakpoint-down(lg) {
+            padding: 24px;
+        }
 
         @include media-breakpoint-down(sm) {
             min-height: 200px;
@@ -151,7 +159,7 @@ section.services {
     background: linear-gradient(#1587b1 0 80%, rgba(0, 0, 0, 0) 80% 100%);
     padding-bottom: 80px;
 
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
         padding-bottom: 123px;
     }
 
@@ -175,8 +183,8 @@ section.services {
                 width: 100%;
                 text-align: center;
                 bottom: 34px;
-                
-                @include media-breakpoint-up(md) {
+
+                @include media-breakpoint-up(lg) {
                     bottom: 54px;
                 }
             }
@@ -239,7 +247,7 @@ section.gallery {
     background: imgUrl("star-logo.png") left bottom;
     padding: 64px 0;
 
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
         padding: 126px 0;
     }
 
@@ -350,7 +358,7 @@ section.promise {
     color: $white;
     text-align: center;
     padding: 64px 0;
-    
+
     @include media-breakpoint-up(md) {
         padding: 80px 0;
     }
