--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -74,7 +74,7 @@ header {
 
 section.about {
     background: imgUrl("about.jpg") center top,
-        linear-gradient(181.35deg, #24abe2 -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
+        linear-gradient(181.35deg, $secondary -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
     background-size: contain;
     padding-top: 64px;
 
@@ -84,7 +84,7 @@ section.about {
 
     @include media-breakpoint-up(xxl) {
         background: imgUrl("about-xl.jpg") center top,
-            linear-gradient(181.35deg, #24abe2 -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
+            linear-gradient(181.35deg, $secondary -0.19%, #29a4d6 41.73%, #1587b1 84.43%);
         background-size: contain;
     }
 
@@ -128,7 +128,7 @@ section.about {
     }
 
     .cta {
-        background: #e8f7ff;
+        background: $light-grey;
         box-shadow: 4px 4px 13px rgba(0, 0, 0, 0.15);
         border-radius: 35px;
         padding: 24px 53px;
@@ -138,6 +138,8 @@ section.about {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        color: $primary;
+        transition: 0.2s ease-in-out;
 
         @include media-breakpoint-down(lg) {
             padding: 24px;
@@ -145,6 +147,43 @@ section.about {
 
         @include media-breakpoint-down(sm) {
             min-height: 200px;
+        }
+
+        .cta-img {
+            height: 99px;
+            width: 138px;
+
+            &.consultation {
+                background: imgUrl("consultation.png", "icons") center;
+            }
+
+            &.assurance {
+                background: imgUrl("assurance.png", "icons") center;
+            }
+
+            &.get-started {
+                background: imgUrl("get-started.png", "icons") center;
+            }
+        }
+
+        &:hover {
+            background: $dark;
+            color: $white;
+            transform: translate(-0.2rem, -0.5rem);
+
+            .cta-img {
+                &.consultation {
+                    background: imgUrl("consultation-highlighted.png", "icons") center;
+                }
+
+                &.assurance {
+                    background: imgUrl("assurance-highlighted.png", "icons") center;
+                }
+
+                &.get-started {
+                    background: imgUrl("get-started-highlighted.png", "icons") center;
+                }
+            }
         }
     }
 
@@ -174,7 +213,7 @@ section.about {
                 @include media-breakpoint-down(lg) {
                     width: 100%;
                 }
-                
+
                 @include media-breakpoint-down(md) {
                     height: 200px;
                 }
@@ -184,7 +223,7 @@ section.about {
 }
 
 section.services {
-    background: linear-gradient(#1587b1 0 80%, rgba(0, 0, 0, 0) 80% 100%);
+    background: linear-gradient(#1587b1 0 65%, rgba(0, 0, 0, 0) 65% 100%);
     padding-bottom: 80px;
 
     @include media-breakpoint-up(xl) {
@@ -223,7 +262,7 @@ section.services {
 
             li {
                 margin: 0;
-                background-color: #afafaf;
+                background-color: $medium-grey;
                 width: 60px;
                 height: 5px;
 
@@ -235,7 +274,7 @@ section.services {
                     &::before {
                         content: "";
                         height: 5px;
-                        background-color: #afafaf;
+                        background-color: $medium-grey;
                         opacity: 1;
                         width: 100%;
                     }
@@ -279,9 +318,34 @@ section.gallery {
         padding: 126px 0;
     }
 
-    img {
-        width: 100%;
-        border-radius: 10px;
+    .gallery-wrapper {
+        .col-lg {
+            transition: all 0.4s ease-in-out;
+            
+            img {
+                transition: 1s ease-out;
+                width: 100%;
+                border-radius: 10px;
+                object-fit: cover;
+                object-position: top;
+                
+                @include media-breakpoint-up(lg) {
+                    height: 459px;
+                }
+            }
+
+            @include media-breakpoint-up(lg) {
+                flex-grow: 1;
+                
+                &:hover {
+                    flex-grow: 2.3;
+    
+                    img {
+                        box-shadow: 0 0 15px $primary;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -407,6 +471,10 @@ section.form {
                 overflow: hidden;
 
                 .radio-img {
+                    &.lap-pool {
+                        background: imgUrl("lap-pool-highlighted.png", "icons") center;
+                    }
+
                     &.plunge-pool {
                         background: imgUrl("plunge-pool-highlighted.png", "icons") center;
                     }
