Animated arrow inserted

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -69,6 +69,11 @@ header {
                 box-shadow: 0 0 13px 13px rgba(0, 0, 0, 0.1);
             }
         }
+
+        .view-more-arrow {
+            max-width: 130px;
+            max-height: 180px;
+        }
     }
 }
 
